Pom cleanup.